# cpp20_learning

./: .gitignore  CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.sln  concepts_test.cpp  concepts_test.ixx  main.cpp
ConceptAndModules/: custom_math.cpp  custom_math.ixx
Testers/SpaceShip/: SpaceShipTester.ixx
Three_Way_Comparison/: SpaceShip.ixx
include/concept_and_modules/: concepts_test.ixx  custom_math.ixx
include/testers/: Tester.ixx
include/threewaycomparison/: SpaceShip.ixx
src/concept_and_modules/: concepts_test.cpp  custom_math.cpp
